--- a/index.html
+++ b/index.html
@@ -14,12 +14,6 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Open+Sans:300,400,700"
       rel="stylesheet"
     />
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
   <header class="hero">
     <div class="container">
@@ -47,7 +41,7 @@
           <!-- <a href="#" class="menu"><img src="assets/menu.png"></a> -->
           <div class="hero-text">
             <h1><span>Hola!! soy</span><br />Ángel García.</h1>
-            <h3>Profesor de informática de Cartagena</h3>
+            <h3>Profesor de informática de Alcalá la Real</h3>
             <a href="https://www.youtube.com/watch?v=L5sw9ITJORY&ab_channel=QuocMinh" class="btn btn-lg btn-info">Conoceme!</a>
             <ul class="social-links">
               <li class="label">Encuentrame aqui :)</li>
