--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </nav>
           <!-- <a href="#" class="menu"><img src="assets/menu.png"></a> -->
           <div class="hero-text">
-            <h1><span>Hola!! soy</span><br />Ángel García.</h1>
+            <h1><span>Hola!! soy</span><br />Cristian Aceituno.</h1>
             <h3>Profesor de informática de Alcalá la Real</h3>
             <a href="https://youtu.be/R1j0MtyojaI?si=OcGREa38qndeUDwz" class="btn btn-lg btn-info">Conoceme!</a>
             <ul class="social-links">
