--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
               <li><a href="index.html">Inicio</a></li>
               <li><a href="https://zoniak.github.io/materiales.html">Material</a></li>
               <!-- <li><a href="#">About</a></li> -->
-              <li><a href="mailto:angelgarciacaparros@gmail.com">Contacto</a></li>
+              <li><a href="mailto:cristianaceitunor9@gmail.com">Contacto</a></li>
             </ul>
           </nav>
           <!-- <a href="#" class="menu"><img src="assets/menu.png"></a> -->
           <div class="hero-text">
             <h1><span>Hola!! soy</span><br />Cristian Aceituno.</h1>
-            <h3>Profesor de informática de Alcalá la Real</h3>
-            <a href="https://www.youtube.com/watch?v=L5sw9ITJORY&ab_channel=QuocMinh" class="btn btn-lg btn-info">Conoceme!</a>
+            <h3>Desarrollador de aplicaciones multiplataforma de Alcalá la Real</h3>
+            <a href="https://youtu.be/rS56OnLnh9g?si=mXyXx6Db9N5eVisQ" class="btn btn-lg btn-info">Conoceme!</a>
             <ul class="social-links">
               <li class="label">Encuentrame aqui :)</li>
 
               <li>
-                <a href="https://www.linkedin.com/in/angelgarciacaparros/"><img src="assets/linkedin.png" /></a>
+                <a href="https://www.instagram.com/cristian.ar9/"><img src="assets/iglogo.png" /></a>
               </li>
               <li>
-                <a href="https://github.com/zoniak?tab=repositories"><img src="assets/github.png" /></a>
+                <a href="https://github.com/Choqueteo"><img src="assets/github.png" /></a>
               </li>
             </ul>
           </div>
@@ -71,7 +71,7 @@
           <div class="col-md-12">
             <h4 class="sub-heading">Conoce</h4>
             <h1 class="heading purple">
-              <span class="purple">mi</span> experiencia <br />trabajando en el sector
+              <span class="purple">mi</span> experiencia <br />estudiando en el sector
             </h1>
             <!-- Swiper -->
             <div class="swiper-container client-swiper">
@@ -79,30 +79,33 @@
                 <div class="swiper-slide client-box">
                   <img src="assets/logo-2.png" class="client-logo" />
                   <h3 class="text-left title">
-                    Profesor de Grado Superior de Desarrollo Web y Multiplataforma
+                    Grado Superior de Desarrollo Web y Multiplataforma
+                  </h3>
+                  <h3 class="text-left title">
+                    Grado Especialización en Inteligencia Artificial
                   </h3>
                   <p class="text-left tag">IES Hermenegildo Lanz, Granada</p>
                 </div>
                 <div class="swiper-slide client-box">
-                  <img src="assets/logo-1.png" class="client-logo" />
+                  <img src="assets/Youtube_logo.png" class="client-logo" />
                   <h3 class="text-left title">
-                  Personal Docente Investigador de la UGR
+                  Curso Python y Java en YT
                   </h3>
-                  <p class="text-left tag">Universidad de Granada, Granada</p>
+                  <p class="text-left tag">YouTube</p>
                 </div>
                 <div class="swiper-slide client-box">
-                  <img src="assets/logo-3.png" class="client-logo" />
+                  <img src="assets/safa.jpg" class="client-logo" />
                   <h3 class="text-left title">
-                    Profesor de Grado Medio y Superior de Informática
+                    Bachillerato Ciencias y Tecnología
                   </h3>
-                  <p class="text-left tag">Atlantida, Granada</p>          
+                  <p class="text-left tag">SAFA Alcalá la Real</p>          
                 </div>
                 <div class="swiper-slide client-box">
                   <img src="assets/logo-2.png" class="client-logo" />
                   <h3 class="text-left title">
-                    Practicas de profesor de Informática
+                    Educación Secundaria Obligatoria
                   </h3>
-                  <p class="text-left tag">IES Soto de Rojas, Granada</p>          
+                  <p class="text-left tag">IES Antonio de Mendoza, Alcalá la Real</p>          
                 </div>
               </div>
             </div>
@@ -119,13 +122,13 @@
       <div class="container-fluid">
         <div class="row footer">
           <div class="col-md-12 text-center">
-            <h1>Ángel<br /><span>García</span></h1>
+            <h1>Cristian<br /><span>Aceituno</span></h1>
             <ul class="social-links">
               <li>
-                <a href="https://www.linkedin.com/in/angelgarciacaparros/"><img src="assets/linkedin.png" /></a>
+                <a href="https://www.instagram.com/cristian.ar9/"><img src="assets/iglogo.png" /></a>
               </li>
               <li>
-                <a href="https://github.com/zoniak?tab=repositories"><img src="assets/github.png" /></a>
+                <a href="https://github.com/Choqueteo"><img src="assets/github.png" /></a>
               </li>
             </ul>
           </div>
